--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,52 @@
+body {
+    background: linear-gradient(180deg, rgb(17, 17, 17) 100%, rgba(119, 119, 119, 0) 100%);
+    margin: 0;
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 .inter-font {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
 
 }
 
+@font-face {
+    font-family: 'Miama';
+    src: url('../css/fontStyle/Miama-Regular.ttf') format('truetype');
+}
+
+
 /* shared style */
 .container {
     width: 90%;
     margin: 2rem auto;
+    color: white;
+}
+
+.primary-btn {
+    width: 14rem;
+    height: 3.3rem;
+    padding: 0.7rem 1.2rem;
+    border-radius: 2.62rem;
+    background: rgb(230, 83, 60);
+    color: white;
+    font-weight: 600;
+    font-size: 18px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.secondary-btn {
+    background: black;
+    box-sizing: border-box;
+    border: 1px solid white;
 }
 
 /* navbar */
-.navbar-wrap {
-    background: linear-gradient(180deg, rgb(17, 17, 17)100%,
-            rgba(119, 119, 119, 0) 100%);
-}
 
 .nav-content {
     display: flex;
@@ -28,6 +60,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 3rem;
+    margin-right: 6.5rem;
 }
 
 .nav-content h2 {
@@ -51,3 +84,154 @@
 }
 
 /* banner-section */
+.banner-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 6rem;
+    margin: auto;
+    background: linear-gradient(180deg, #111111FF 100%, #77777700 0%);
+
+}
+
+/* background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%); 4.8 */
+
+.banner-info h2 {
+    font-size: 4.8rem;
+    font-weight: 900;
+    line-height: 1.2;
+    position: relative;
+    display: inline-block;
+    margin-bottom: 1.75rem;
+}
+
+.banner-info .styled-text {
+    font-family: 'Miama', cursive;
+    letter-spacing: 2px;
+    font-size: 4.3rem;
+    font-weight: 400;
+    display: inline-block;
+    position: relative;
+    vertical-align: bottom;
+    z-index: 1;
+}
+
+.banner-info p {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 18px;
+    margin-top: 0;
+    margin-bottom: 1.75rem;
+}
+
+.banner-info .btn-container {
+    display: flex;
+    gap: 14px;
+}
+
+.banner-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-img img {
+    width: 100%;
+    height: 36.2rem;
+    object-fit: contain;
+    position: relative;
+}
+
+
+
+.banner-img .img-box1 h4, p,
+.img-box2 h4, p {
+    background: none;
+    margin: 0;
+    padding: 0;
+    color: inherit;
+}
+
+.banner-img .img-box1 {
+    position: absolute;
+    left: 68rem;
+    top: 16rem;
+    width: 185px;
+    height: 98px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.1);
+    padding: 10px;
+    color: white;
+}
+
+.banner-img .img-box1 h4 {
+    font-size: 40px;
+    font-weight: 900;
+    margin: 0;
+}
+
+.banner-img .img-box1 p {
+    color: rgba(255, 255, 255, 0.65);
+    font-size: 14px;
+    margin: 0;
+}
+
+.banner-img .img-box2 {
+    position: absolute;
+    left: 740px;
+    top: 550px;
+    width: 206px;
+    height: 96px;
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    /* backdrop-filter: blur(20px); */
+    box-sizing: border-box;
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.banner-img .img-box2 .dot {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgb(230, 83, 60);
+    flex-shrink: 0;
+    position: relative;
+
+}
+
+.dot i {
+    font-size: 13px;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.banner-img .img-box2 .text-info {
+    background: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.banner-img .img-box2 .text-info h4 {
+    font-weight: 900;
+    font-size: 24px;
+    margin: 0;
+    line-height: 1;
+}
+
+.banner-img .img-box2 .text-info p {
+    color: rgba(239, 237, 232, 0.65);
+    font-size: 16px;
+    margin: 0;
+    line-height: 1;
+}
