--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,25 @@ body {
 }
 
 
+
+
 /* shared style */
 .container {
     width: 90%;
-    margin: 2rem auto;
+    margin: 4rem auto;
     color: white;
+}
+
+h1 {
+    font-size: 3rem;
+    font-weight: 900;
+    color: rgb(255, 255, 255);
+
+}
+
+p {
+    color: rgba(255, 255, 255, 0.3);
+    font-size: 0.8rem;
 }
 
 .primary-btn {
@@ -234,4 +248,44 @@ body {
     font-size: 16px;
     margin: 0;
     line-height: 1;
+}
+
+/* change-habit-section */
+.habit-section {
+    text-align: center;
+    margin-bottom: 3.6rem;
+}
+
+.habit-section p {
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.exercise-info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3rem;
+    gap: 2.5rem;
+}
+
+.exercise-details {
+    width: 231px;
+    height: 275px;
+    text-align: center;
+}
+
+.exercise-details img {
+    width: 170px;
+    height: 170px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.exercise-details h3 {
+    font-size: 18px;
+    color: white;
+}
+
+.exercise-details p {
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.5);
 }
