--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(180deg, rgb(17, 17, 17) 100%, rgba(119, 119, 119, 0) 100%);
+    background: rgb(5, 5, 5);
     margin: 0;
     min-height: 100vh;
     background-repeat: no-repeat;
@@ -61,6 +61,10 @@ p {
 }
 
 /* navbar */
+.nav-banner-container {
+    background-image: linear-gradient(to bottom, #000000, #161616, #252525, #353535, #454546, #454546, #454546, #454546, #353535, #252525,
+            #161616, #000000);
+}
 
 .nav-content {
     display: flex;
@@ -102,12 +106,9 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 6rem;
-    margin: auto;
-    background: linear-gradient(180deg, #111111FF 100%, #77777700 0%);
-
+    margin: auto 100px;
+    color: white;
 }
-
-/* background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%); 4.8 */
 
 .banner-info h2 {
     font-size: 4.8rem;
@@ -154,8 +155,6 @@ p {
     position: relative;
 }
 
-
-
 .banner-img .img-box1 h4, p,
 .img-box2 h4, p {
     background: none;
@@ -200,7 +199,6 @@ p {
     padding: 10px;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 12px;
-    /* backdrop-filter: blur(20px); */
     box-sizing: border-box;
     color: white;
     display: flex;
@@ -289,3 +287,5 @@ p {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.5);
 }
+
+/* run-mile-section */
