--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,13 @@ body {
     font-weight: 900;
     color: rgb(255, 255, 255);
 
+
 }
 
 .primary-text {
     color: rgba(255, 255, 255, 0.3);
     font-size: 0.8rem;
+
 }
 
 .primary-btn {
@@ -295,7 +297,7 @@ body {
     margin: auto 4rem;
     display: flex;
     flex-direction: column;
-    gap: 1.8rem;
+    row-gap: 1.8rem;
     text-align: left;
 
 }
@@ -314,4 +316,124 @@ body {
     width: 22.8rem;
     height: 19.5rem;
     border-radius: 18px;
+}
+
+/* BMI Calculator-section */
+.bmi-section {
+    text-align: center;
+
+}
+
+.bmi-section p {
+    margin-bottom: 3rem;
+}
+
+.bmi-details {
+
+    color: white;
+    padding: 3rem 2rem;
+    display: grid;
+    grid-template-columns: 5fr 7fr;
+    grid-gap: 3rem;
+    background-color: rgb(34, 34, 34);
+}
+
+.bmi-details h2 {
+    margin: 0;
+    font-size: 28px;
+    font-weight: 900;
+    margin-bottom: 14px;
+}
+
+.bmi-details p {
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.chart-container {
+    margin: 0;
+}
+
+.chart-container table {
+    width: 310px;
+    height: 216px;
+    margin: 52px auto;
+
+}
+
+.chart-container table, th, td {
+    padding: 10px 14px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-collapse: collapse;
+}
+
+.chart-container th {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.chart-container td {
+    font-size: 0.8rem;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+
+.input-container {
+    width: 577px;
+    height: 386px;
+    text-align: left;
+}
+
+.input-box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 24px;
+    margin: 34px auto;
+}
+
+input::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+    opacity: 1;
+}
+
+.input-box input:nth-child(1) {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.input-box input, select {
+    padding: 16px 20px;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.4);
+    color: rgba(255, 255, 255, 0.6);
+    border: none;
+}
+
+.input-box input:nth-child(2) {
+    grid-column: 2;
+    grid-row: 1;
+
+}
+
+.input-box input:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.input-box select:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.input-box select:nth-child(5) {
+    grid-column: 1 / span 2;
+    grid-row: 3;
+}
+
+
+
+.select-box option {
+    background: rgba(34, 34, 34, 1);
+    color: white;
 }
