--- a/css/style.css
+++ b/css/style.css
@@ -431,9 +431,48 @@ input::placeholder {
     grid-row: 3;
 }
 
+/* meet team section */
+.team-container {
+    text-align: center;
 
+}
 
-.select-box option {
-    background: rgba(34, 34, 34, 1);
-    color: white;
+.team-imgs {
+    padding: 20px;
+    margin: 3rem auto;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
+}
+
+.team-imgs img {
+    width: 100%;
+    height: 280px;
+    border-radius: 8px;
+}
+
+.img-card {
+    position: relative;
+    border-radius: 18px;
+}
+
+.img-info {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    text-align: left;
+}
+
+.img-info h4 {
+    font-size: 20px;
+    font-weight: 900;
+    margin: 0;
+}
+
+.img-info p {
+    margin-top: 10px;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.8);
 }
