--- a/css/style.css
+++ b/css/style.css
@@ -550,3 +550,81 @@ input::placeholder {
     cursor: pointer;
     background-color: rgb(230, 83, 60);
 }
+
+/* foooter section */
+
+.footer-section {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 2rem 0;
+
+}
+
+.footer-container {
+    display: grid;
+    grid-template-columns: 6fr 3fr 3fr;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
+.footer-logo {
+    max-width: 450px;
+    margin: 0 auto;
+}
+
+.footer-logo h1 {
+    color: rgb(230, 83, 60);
+    font-size: 4rem;
+    margin-bottom: 1rem;
+}
+
+.footer-logo p {
+    font-size: 0.8rem;
+    line-height: 1.5;
+    color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 5rem;
+}
+
+.footer-links {
+    flex: 1;
+    margin-left: 2rem;
+    color: white;
+}
+
+.footer-links h3 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+
+}
+
+.footer-links ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-links ul li {
+    margin: 0.8rem 0;
+
+}
+
+.footer-links ul li a {
+    color: rgba(255, 255, 255, 0.5);
+    text-decoration: none;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+    margin-top: 0.8rem;
+}
+
+.footer-links ul li a:hover {
+    color: #ff6600;
+}
+
+.footer-bottom {
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 2rem 0;
+    margin: 1.5rem 0;
+    text-align: center;
+    font-size: 0.8rem;
+    color: rgba(255, 255, 255, 0.6);
+}
