--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,6 @@ body {
     src: url('../css/fontStyle/Miama-Regular.ttf') format('truetype');
 }
 
-
-
-
 /* shared style */
 .container {
     width: 90%;
@@ -31,14 +28,11 @@ body {
     font-size: 3rem;
     font-weight: 900;
     color: rgb(255, 255, 255);
-
-
 }
 
 .primary-text {
     color: rgba(255, 255, 255, 0.3);
     font-size: 0.8rem;
-
 }
 
 .primary-btn {
@@ -71,6 +65,7 @@ body {
 .nav-content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: white;
     margin: auto 6rem;
 }
@@ -101,6 +96,10 @@ body {
     border-radius: 1rem;
     background: rgb(230, 83, 60);
     font-weight: 800;
+}
+
+.menu-bar {
+    display: none;
 }
 
 /* banner-section */
@@ -313,8 +312,10 @@ body {
 }
 
 .run-mile-img img {
-    width: 22.8rem;
-    height: 19.5rem;
+    width: 24rem;
+    height: 22rem;
+    object-fit: none;
+    object-position: 67% 34%;
     border-radius: 18px;
 }
 
@@ -627,4 +628,9 @@ input::placeholder {
     text-align: center;
     font-size: 0.8rem;
     color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-bottom p {
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.5);
 }
